feat: implementar solicitações de benefício do ticket 07
